--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -34,6 +34,7 @@ html {
   text-decoration: none;
   width: 100%;
   height: 100%;
+  font-size: calc(var(--nav-height)/1.8);
 }
 
 .nav .nav__list .nav__list__item-link:hover {
