--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -30,6 +30,7 @@ html{
         text-decoration: none;
         width: 100%;
         height: 100%;
+        font-size: calc(var(--nav-height)/1.8);
 
         &:hover{
           color: #00dddd;
