--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -3,12 +3,13 @@
   --article-header-color: #2c2c2c;
   --article-header-height: 40vh;
   --article-header-font: 'Carter One', cursive;
+  --article-header-font-size: calc(var(--article-header-height) * 0.2);
 }
 
 .article {
   position: absolute;
   left: 0;
-  top: calc(var(--nav-height) * 1.5);
+  top: calc(var(--nav-height));
   width: 100%;
   height: auto;
   min-height: 20vh;
@@ -21,7 +22,7 @@
   color: #fff;
   text-align: center;
   line-height: var(--article-header-height);
-  font-size: calc(var(--article-header-height) * 0.2);
+  font-size: var(--article-header-font-size);
   text-shadow: 0px 0px 10px #2c2c2c;
   box-shadow: inset 0 0 10px #2c2c2c;
   overflow: hidden;
@@ -36,4 +37,18 @@
   font-size: calc(var(--article-header-height) / 20);
   padding: calc(var(--article-header-height) / 50);
   text-rendering: geometricPrecision;
+}
+
+.article .article__content .article__section {
+  width: 80%;
+  height: auto;
+  margin: 2vh auto;
+}
+
+.article .article__content .article__section__header {
+  text-align: center;
+  font-size: calc(var(--article-header-font-size) / 1.3);
+  font-weight: 600;
+  color: #1b1b1b;
+  text-shadow: 0px 0px 2px #1b1b1b;
 }
