--- a/src/main.css
+++ b/src/main.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -24,7 +25,6 @@ body {
   left: 0;
   top: 0;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .parallax {
