--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@
 }
 
 @import url('https://fonts.googleapis.com/css?family=Monda');
-*{margin: 0;padding: 0;box-sizing: border-box;}
+*{margin: 0;padding: 0;box-sizing: border-box;scroll-behavior: smooth;}
 body{
   overflow-x: hidden;
   transform-style: preserve-3d;
@@ -19,7 +19,7 @@ body{
   left: 0;
   top: 0;
   overflow-x: hidden;
-  overflow-y: scroll;
+  //overflow-y: scroll;
 }
 
 .parallax{
